--- a/index.html
+++ b/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./slyle.css">
+    <title>Adaptive web-design challenge two</title>
 </head>
-<title id="TITLE"><H1>Adaptive web-design challenge two</H1></title>
+
+
 <body>
+    <h1 id="title">Adaptive web-design challenge two</h1>
     <main>
         <div>
-            <p id="description">Breef explanation</p>
+            <p id="description">Hearthstone player's resume</p>
         </div>
-        <form id="survey-form" action="">
-            <label for="name" id="name-label">Enter your name</label>
-            <input type="text" id="name" required placeholder="sss">
-            <label for="email" id="email-label">Enter your e-mail</label>
-            <input type="email" name="" id="email" required placeholder="sss">
-            <label for="number" id="number-label">Enter a number from one to ten</label>
-            <input type="number" name="" id="number" required min="0" max="10" placeholder="sss">
-            <select id="dropdown" name="">
-                <option disabled required value="Select an option">Select an option</option>
-                <option value="Hearthstone">Hearthstone</option>
-                <option value="Hearthstone">Faeria</option>
-                <option value="Hearthstone">Artifact</option>
-            </select>
+        <form id="survey-form">
+            <div class="text-container form-group">
+                <label for="name" id="name-label">Enter your name
+                    <input type="text" id="name" required placeholder="Leeroy Jenkins">
+                </label>
+            </div>
+            <div class="email-container form-group">
+                <label for="email" id="email-label">Enter your e-mail
+                    <input type="email" name="email" id="email" required placeholder="box@server.com">
+                </label>
+            </div>
+            <div class="number-container form-group">
+                <label for="number" id="number-label">Enter a number from one to ten
+                    <input type="number" name="number" id="number" required min="0" max="10" placeholder="0">
+                </label>
+            </div>
+            <div class="dropdown-container form-group">
+                <label for="dropdown" id="dropdown-label">Enter your favourite card game
+                    <select id="dropdown" name="dropdown">
+                        <option disabled value="Select an option" selected>Select an option</option>
+                        <option value="Hearthstone">Hearthstone</option>
+                        <option value="Faeria">Faeria</option>
+                        <option value="Artifact">Artifact</option>
+                    </select>
+                </label>
+            </div>
+            <div class="radio-container form-group">
+                <p>Choose your status</p>
+                <label for="f2p">
+                    <input type="radio" name="money-option" value="f2p" id="f2p">
+                    f2p
+                </label>
+                <label for="donator">
+                    <input type="radio" name="money-option" id="donator" value="donator">
+                    donator
+                </label>
+            </div>
+            <div class="radio-container form-group">
+                <p>Choose your preffered modes</p>
+                <label for="Standard">
+                    Standard
+                    <input type="checkbox" name="mode-option" value="Standard" id="Standard">
+                </label>
+                <label for="Casual">
+                    Casual
+                    <input type="checkbox" name="mode-option" value="Casual" id="Casual">
+                </label>
+                <label for="Arena">
+                    Arena
+                    <input type="checkbox" name="mode-option" value="Arena" id="Arena">
+                </label>
+                <label for="Battlegrounds">
+                    Battlegrounds
+                    <input type="checkbox" name="mode-option" value="Battlegrounds" id="Battlegrounds">
+                </label>
+
+            </div>
+            <textarea name="textarea" id="additional" cols="30" rows="10">That's all, folks!</textarea>
+            <button id="submit">Submit</button>
         </form>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
+
 </html>
