All tests passed2

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             </div>
             <textarea name="textarea" id="additional" cols="30" rows="10">That's all, folks!</textarea>
-            <button id="submit">Submit</button>
+            <button id="submit">Submit2</button>
         </form>
     </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
